Handling API errors and added field validation. Updated the image transform params. Update configuration.

--- a/image-processor-rest-api/pom.xml
+++ b/image-processor-rest-api/pom.xml
@@ -19,6 +19,7 @@
         <java.version>21</java.version>
         <map-struct.version>1.5.5.Final</map-struct.version>
         <map-struct-spring-extension.version>1.1.2</map-struct-spring-extension.version>
+        <common-lang.version>3.17.0</common-lang.version>
     </properties>
 
     <dependencies>
@@ -50,6 +51,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${common-lang.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
