--- a/image-processor-rest-api/src/main/resources/application.yml
+++ b/image-processor-rest-api/src/main/resources/application.yml
@@ -11,10 +11,12 @@ spring:
     url: ${DATABASE_URL}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
   rabbitmq:
     host: ${RABBITMQ_HOST}
     port: ${RABBITMQ_PORT}
     username: ${RABBITMQ_USERNAME}
     password: ${RABBITMQ_PASSWORD}
+  liquibase:
+    change-log: classpath:/db/changelog/db.changelog-master.xml
