Cleanup. Updated the code to send a message to the notification queue when image transformation is completed.

--- a/image-processor-engine/pom.xml
+++ b/image-processor-engine/pom.xml
@@ -86,9 +86,25 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
-                    <outputDirectory>../docker/engine</outputDirectory>
-                    <finalName>${artifactId}</finalName>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.coderplus.maven.plugins</groupId>
+                <artifactId>copy-rename-maven-plugin</artifactId>
+                <version>1.0</version>
+                <executions>
+                    <execution>
+                        <id>copy-file</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <sourceFile>target/${build.finalName}.jar</sourceFile>
+                            <destinationFile>../docker/engine/${artifactId}.jar</destinationFile>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
