--- a/docker/services/engine/Dockerfile
+++ b/docker/services/engine/Dockerfile
@@ -1,6 +1,6 @@
 FROM eclipse-temurin:21
 
-ADD ./image-processor-engine.jar image-processor-engine.jar
+ADD image-processor-engine.jar image-processor-engine.jar
 
 ENTRYPOINT ["java","-jar","image-processor-engine.jar"]
 
