--- a/image-processor-rest-api/pom.xml
+++ b/image-processor-rest-api/pom.xml
@@ -142,7 +142,7 @@
                         </goals>
                         <configuration>
                             <sourceFile>target/${build.finalName}.jar</sourceFile>
-                            <destinationFile>../docker/rest-api/${artifactId}.jar</destinationFile>
+                            <destinationFile>../docker/services/rest-api/${artifactId}.jar</destinationFile>
                         </configuration>
                     </execution>
                 </executions>
