--- a/image-processor-rest-api/pom.xml
+++ b/image-processor-rest-api/pom.xml
@@ -20,6 +20,7 @@
         <map-struct.version>1.5.5.Final</map-struct.version>
         <map-struct-spring-extension.version>1.1.2</map-struct-spring-extension.version>
         <commons-collections.version>4.4</commons-collections.version>
+        <springdoc.version>2.8.6</springdoc.version>
     </properties>
 
     <dependencies>
@@ -46,6 +47,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc.version}</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
