--- a/image-processor-notification/pom.xml
+++ b/image-processor-notification/pom.xml
@@ -86,8 +86,8 @@
                             <goal>copy</goal>
                         </goals>
                         <configuration>
-                            <sourceFile>target/${build.finalName}.jar</sourceFile>
-                            <destinationFile>../docker/services/notification/${artifactId}.jar</destinationFile>
+                            <sourceFile>target/${project.build.finalName}.jar</sourceFile>
+                            <destinationFile>../docker/services/notification/${project.artifactId}.jar</destinationFile>
                         </configuration>
                     </execution>
                 </executions>
